Logout Button and toggleing display elements
logout.sh
curl script for testing logout to API

index.scss:
created basic id tags to hide all forms except login when the page loads

index.html:
added logout button
added anchor tags for registering new user
added anchor tags to toggle the registration form and the login form

app.js:
added event listener for btn-logout
added onClick events to toggle the registration form and the login form

events.js:
added event listener for logout with promise functions

api.js:
created logout function

ui.js:
wrote promise functions for logout success and failure

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,14 @@
 @import '~bootstrap/scss/bootstrap';
+
+
+#register-form {
+  display: none;
+}
+
+#change-password-form {
+  display: none;
+}
+
+#btn-logout {
+  display: none;
+}
