--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,7 +10,7 @@ body {
 .nav {
   
   background-color: #1583CB;
-  height: 60px;
+  height: 40px;
   right: 10px;
   text-align: right;
 
@@ -22,8 +22,9 @@ body {
   
     & a:link,
     & a:visited {
-        padding-bottom: 5px;
-        font-size: 125%;
+        padding-bottom: 1px;
+        font-size: 20px;
+        line-height: 20px;
         color: #999b99;
         text-decoration: none;
         border-bottom: 3px solid transparent;
@@ -41,7 +42,7 @@ body {
 
 .container {
   max-width: 500px;
-  margin: 50px auto 10px auto;
+  margin: 30px auto 10px auto;
 
   &.scoreboard-container {
     border: 1px solid black;
